# fiap-tcf-3

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  requirements.txt.backup_colab
docs/: README.md  apresentacao_roteiro.md  predict.py  predict_fast.py  predict_pipeline.py  relatorio_final_apresentacao.md  video_script.md
notebooks/: 01_ingestao_limpeza.ipynb  02_eda.ipynb  03_feature_engineering.ipynb  04_modelo_supervisionado.ipynb  05_modelo_nao_supervisionado.ipynb  06_resultados_finais.ipynb  notebook_final.ipynb
reports/: analysis_report.md
src/voos/: __init__.py  eda.py  features.py  ingestao.py  limpeza.py  nao_supervisionado.py  supervisionado.py  utils.py
tests/: conftest.py  test_eda.py  test_features.py  test_ingestao.py  test_integracao.py  test_limpeza.py  test_nao_supervisionado.py  test_supervisionado.py  test_utils.py
